# xn2s

./: .env.langfuse.example  .env.langfuse.project.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.langfuse.yml  pyproject.toml
docs/codex/: agentic-digest-brainstorm.md  autolearning.md  coding-preferences.md  langchain-codex-oauth.md  langfuse-local.md  report_taxonomy.json  ui-performance-audit-2026-03-18.md
docs/codex/execplans/: 2026-04-05-phoenix-openai-agents-tracing.md  2026-04-05-single-runner-agents-sdk-scaffold.md  2026-04-08-text-router-agent.md  2026-04-09-issue-organizer-agent.md  2026-04-09-text-router-package-refactor.md  agentic-pipeline-hard-prune.md  cli-onboarding.md  cli-ui-jsonl-job-events.md  data-json-persistence-migration.md  deep-agent-cluster-builder.md  (+35 more)
scripts/: codex_auth.py  run_agentic_pipeline.py  run_cluster_builder.py
scripts/utils/: get_all_last_24h_tweets.py
src/xs2n/: __init__.py  auth.py  credentials.py  llm.py  pipeline.py  report_runtime.py  run.py  storage.py  timeline_storage.py  twitter.py  twitter_cookies.py  twitter_nitter.py  twitter_nitter_net.py  twitter_nitter_rss.py  twitter_twscrape.py  twitter_x_api.py
src/xs2n.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_auth.py  test_auth_cli.py  test_auth_recovery.py  test_base_agent.py  test_browser_cookies.py  test_cli_helpers.py  test_cluster_builder_agent.py  test_cluster_builder_store.py  test_cluster_builder_thread_queue.py  test_cluster_builder_tools.py  test_codex_auth.py  test_digest_browser.py  test_digest_browser_probe.py  test_digest_browser_state.py  test_following.py  test_group_issues.py  test_issue_organizer.py  test_langchain_codex_oauth.py  test_llm.py  test_onboard_cli.py  test_onboard_recovery.py  test_onboarding.py  test_openai_client.py  test_pipeline.py  test_render_digest_html.py  test_report_cli.py  test_report_digest.py  test_report_llm.py  test_report_runtime.py  test_report_schedule.py  test_report_schedule_storage.py  test_run.py  test_run_agentic_pipeline.py  test_run_cluster_builder.py  test_text_router.py  test_timeline_cli.py  test_timeline_fetching.py  test_timeline_storage.py  test_tracing.py  test_twitter.py  (+23 more)
(+139 files in other folders)
