[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "xs2n"
version = "0.1.0"
description = "Minimal Codex-authenticated digest pipeline base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ntscraper>=0.4.0",
  "openai>=1.68.0",
  "openai-agents>=0.12.5",
  "pydantic>=2.10.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
