[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "xs2n"
version = "0.1.0"
description = "Codex-authenticated tweet runner with an Agents SDK scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "arize-phoenix>=8.0.0",
  "feedparser>=6.0.0",
  "openai>=1.68.0",
  "openai-agents>=0.12.5",
  "openinference-instrumentation-openai-agents>=0.1.14",
  "pydantic>=2.10.6",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
xs2n = "xs2n.run:main"
xs2n-auth = "xs2n.auth:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"xs2n.prompts" = ["*.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
